--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Squada+One&family=Heebo&display=swap"
       rel="stylesheet"
     />
     <link
