--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-games-background-01 bg-cover h-full bg-center">
+<html
+  lang="en"
+  class="bg-games-background-01 bg-cover h-full bg-center bg-no-repeat bg-black"
+>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
